# port-libxml

./: .gitignore  README.md  dependents.json  test-original.sh  validator-report.md
safe/: Cargo.toml  PORT.md  build.rs
safe/abi/: libxml2.syms
safe/abi/baseline/: enums.json  exports.txt  layouts.json  original-oracles.txt  package-files.txt  pkgconfig.txt  xml2Conf.sh.txt  xmlcatalog-help.txt  xmllint-help.txt
safe/benchmarks/: README.md  original-baseline.json
safe/debian/: changelog  libxml2.symbols  python3-libxml2.install  rules
safe/include/: config.h
safe/python/: Makefile  libxml2.py  setup.py
safe/scripts/: build-deb.sh  build-original-baseline.sh  build-safe.sh  gen_abi_baseline.py  install-staging.sh  prepare-validator-deb-root.sh  run-debian-autopkgtests.sh  run-upstream-tests.sh  verify-cli-regressions.sh  verify-link-compat.sh  verify-packaged-dev-surface.sh  verify-performance.sh  verify-security-regressions.sh  verify-validator-regressions.sh
safe/shims/: debugXML_hidden.c  error_varargs.c  html_parser_impl.c  legacy_impl.c  parser_impl.c  parser_internals_impl.c  parser_symbol_renames.h  sax2_impl.c  sax_impl.c  xmlcatalog_main.c  xmllint_main.c  xmlreader_impl.c  xmlreader_varargs.c  xmlsave_impl.c  xmlschemas_varargs.c  xmlstring_varargs.c  xmlwriter_impl.c  xmlwriter_varargs.c
safe/src/: internal_ffi.rs  lib.rs
safe/src/abi/: layout_asserts.rs  mod.rs  opaque.rs  types.rs
safe/src/cli/: mod.rs  xmlcatalog.rs  xmllint.rs
safe/src/debug/: debug_xml.rs  mod.rs  shell.rs
safe/src/foundation/: buf.rs  chvalid.rs  dict.rs  error.rs  (+7 more)
(+89 files in other folders)
