[package]
name = "libxml2-safe-phase1"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

[lib]
name = "xml2"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "xmllint"
path = "src/bin/xmllint.rs"

[[bin]]
name = "xmlcatalog"
path = "src/bin/xmlcatalog.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
