[package]
name = "libxml2"
version = "2.9.14"
edition = "2021"
build = "build.rs"
publish = false

[lib]
name = "xml2"
crate-type = ["staticlib", "rlib"]

[dependencies]
c2rust-bitfields = "0.22.1"

[[bin]]
name = "xmllint"
path = "src/bin/xmllint.rs"

[[bin]]
name = "xmlcatalog"
path = "src/bin/xmlcatalog.rs"
